fix(left-nav): make left hand sidebar not jump and full height content

--- a/client/src/styles/components/_navigation-menus.scss
+++ b/client/src/styles/components/_navigation-menus.scss
@@ -22,3 +22,8 @@ nav li.active a,
 nav a:hover {
   background: #DB245D;
 }
+
+left-nav {
+  display: flex;
+  width: 280px;
+}
